Attempt to fix codeblock wrapping

--- a/src/components/post/CodeBlock/code-block.css
+++ b/src/components/post/CodeBlock/code-block.css
@@ -4,8 +4,10 @@ pre.codeblock {
 	overflow: auto;
 	tab-size: 4;
 	speak-as: literal-punctuation;
+	white-space: pre;
+	display: inline-block;
+	min-width: 100%;
 }
-
 pre.codeblock div.token-line {
 	min-width: 100%;
 }
